Bug 103815 - CRASH when moving slides in slide sorter view (GTK2)
Summary: CRASH when moving slides in slide sorter view (GTK2)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha1+
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: VCL-Scheduler
  Show dependency treegraph
 
Reported: 2016-11-09 19:26 UTC by Xisco Faulí
Modified: 2016-11-12 14:00 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
backtrace (16.04 KB, text/x-log)
2016-11-09 19:29 UTC, Xisco Faulí
Details
console bt logs (3.38 KB, text/plain)
2016-11-09 22:29 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2016-11-09 19:26:54 UTC
Steps to reproduce:
1. Open attachment 128624 [details] ( bug 103806 )
2. Go to View - Slide Sorter
3. Start moving slides to different positions

Observed behavior: LibreOffice crashes after some slides are moved to another positions, sometimes even after just moving one slide.

Expected behavior: LibreOffice doesn't crash

Reproduced in

Version: 5.3.0.0.alpha1+
Build ID: 8a2a3f1032b4e60f7607e3ecb1ff99a6bb9af7f9
CPU Threads: 4; OS Version: Linux 4.2; UI Render: GL; VCL: gtk2; Layout Engine: new; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 1 Xisco Faulí 2016-11-09 19:29:47 UTC
Created attachment 128625 [details]
backtrace
Comment 2 Xisco Faulí 2016-11-09 19:33:36 UTC
I can't reproduce it in

Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8)
Comment 3 Xisco Faulí 2016-11-09 20:14:42 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2016-09-05 20:55:22 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2016-09-06 08:50:05 (GMT)
commit 180a0eac238ce456771ff20b8d3274b43408f54c (patch)
tree ee22ecfa6a5c4e8263a49dab687b8bf585c5da36
parent 9ea5483d9bd44b136c89e45ef96bbf3df0a7cdef (diff)

use same GtkInstance::AnyInput impl for gtk2 and gtk3

Adding Cc: to Caolán McNamara
Comment 4 Julien Nabet 2016-11-09 22:29:34 UTC
Created attachment 128627 [details]
console bt logs

On pc Debian x86-64 with master sources updated today, I could reproduce this if I use export SAL_USE_VCLPLUGIN=gtk. (not, as expected, with gtk3)

I attached console and bt because I use enable-dbgutil so thought it may give some extra help.
Comment 5 Julien Nabet 2016-11-09 22:30:15 UTC
Let's increase the importance since it's a crash+regression.
Comment 6 Commit Notification 2016-11-10 12:47:24 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=53bd86e0965d0a80f84a5528e040e4c050c607b0

Resolves: tdf#103815 Revert "use same GtkInstance::AnyInput impl"

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.