Resolves: tdf#103815 Revert "use same GtkInstance::AnyInput impl"

cause of the reported regression, it seems extradinary that this
would cause that, but it seems to be the case and I have no interest
in debugging the undebuggable scheduler.

This reverts commit 180a0eac238ce456771ff20b8d3274b43408f54c.