vcl/unx/gtk/gtkinst.cxx
@@ -119,6 +119,7 @@ extern "C"
     }
 }
 
+#if GTK_CHECK_VERSION(3,0,0)
 static VclInputFlags categorizeEvent(const GdkEvent *pEvent)
 {
     VclInputFlags nType = VclInputFlags::NONE;
@@ -147,6 +148,7 @@ static VclInputFlags categorizeEvent(const GdkEvent *pEvent)
     }
     return nType;
 }
+#endif
 
 GtkInstance::GtkInstance( SalYieldMutex* pMutex )
 #if GTK_CHECK_VERSION(3,0,0)
@@ -439,6 +441,9 @@ bool GtkInstance::AnyInput( VclInputFlags nType )
     EnsureInit();
     if( (nType & VclInputFlags::TIMER) && IsTimerExpired() )
         return true;
+#if !GTK_CHECK_VERSION(3,0,0)
+    bool bRet = X11SalInstance::AnyInput(nType);
+#else
     if (!gdk_events_pending())
         return false;
 
@@ -466,6 +471,7 @@ bool GtkInstance::AnyInput( VclInputFlags nType )
         gdk_event_free(pEvent);
         aEvents.pop();
     }
+#endif
     return bRet;
 }
 
